<resources>
    <string name="app_name">Renesans</string>
    <string name="next">Dalej</string>
    <string name="back">Wróć</string>
    <string name="end">Zakończ</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover">Odkrywaj</string>
    <string name="map">Mapa</string>
    <string name="settings">Ustawienia</string>
    <string name="title_activity_maps">Map</string>
    <string name="sources">Źródła</string>
    <string name="my_location">Moja lokalizacja</string>
    <string name="turn_on_location">Włącz usługę lokalizacji</string>
    <string name="cant_get_location">Nie rozpoznano aktualnej lokalizacji</string>
    <string name="search">Szukaj…</string>
    <string name="important_people">Ważni ludzie</string>
    <string name="important_arts">Wyróżnione dzieła</string>
    <string name="important_events">Ważne wydarzenia</string>
    <string name="other_eras">Inne epoki</string>
    <string name="one_minute_more">Jeszcze tylko chwila..</string>
    <string name="need_storage_permission">Potrzebujemy twojej zgody do pamięci urządzenia aby zapisywać do niej zdjęcia w niskiej jakości. W ten sposób będziesz mógł korzystać z aplikacji offline. Obiecujemy, że nie zajmiemy dużo miejsca.</string>
    <string name="relations">Powiązania</string>
    <string name="main_content">Treść główna</string>
    <string name="world_art">Sztuka świata</string>
    <string name="know_about_culture">Na bieżąco dowiaduj się o nowościach z zakresu sztuki, kultury i wiedzy o ubiegłych epokach.</string>
    <string name="settings_describe">Dopasuj aplikację do swojej wygody i spraw aby była jeszcze przyjemniejsza w użytkowaniu.</string>
    <string name="app_version">Wersja aplikacji</string>
    <string name="map_animations">Animacje mapy</string>
    <string name="map_animations_desc">Włącz animacje podczas wybierania miejsc na mapie.</string>
    <string name="map_mode">Tryb mapy</string>
    <string name="download_photos">Pobieranie zdjęć</string>
    <string name="download_photos_desc">Pobieraj zdjęcia niskiej jakości aby później móc korzystać z aplikacji w trybie offline.</string>
    <string name="era">Epoka</string>
    <string name="renesans">Renesans</string>
    <string name="tour_view">Widok szlaku</string>
    <string name="tour_view_desc">Zmniejsz przezroczystość mapy w widoku interaktywnego szlaku, aby zwiększyć czytelność treści.</string>
    <string name="all_buildings_desc">Pokazuj wszystkie budowle.</string>
    <string name="all_buildings">Wszystkie</string>
    <string name="all_to_choosed_era_desc">Pokazuj budowle, które już istniały lub zostały wybudowane w wybranej epoce.</string>
    <string name="all_to_choosed_era">Istniejące</string>
    <string name="era_buildings">Wybudowane (niezalecane)</string>
    <string name="era_buildings_desc">Pokazuj budowle wybudowane tylko w wybranej epoce.</string>
    <string name="warning">Uwaga!</string>
    <string name="warning_desc">Lata budowy niektórych miejsc na mapie są przybliżone i czasami ich obecność na mapie nie świadczy o tym, że zostały wybudowane w wybranej epoce.</string>
    <string name="map_functionalities">Funkcje mapy</string>
    <string name="map_functionalities_desc">Zablokuj pasek narzędziowy na mapie aby stała się szybsza i łatwiej było przemieszczać się między miastami.</string>
    <string name="send">Wyślij</string>
    <string name="comment">Komentarz</string>
    <string name="paragraph_content">Treść akapitu</string>
    <string name="paragraph_title">Tytuł akapitu</string>
    <string name="suggest_changes">Zasugeruj zmiany</string>
    <string name="new_paragraph">Nowy akapit</string>
    <string name="paragraph">Akapit</string>
    <string name="suggestions_sent">Sugestie zostały wysłane.</string>
    <string name="suggestions_fail">Coś poszło nie tak.</string>
    <string name="retry">Spróbuj ponownie</string>
    <string name="curiosity">Czy wiesz, że kiedy Krzysztof Kolumb dotarł do amerykańskiego kontynentu tak naprawdę myślał, że dotarł do Indii?</string>
    <string name="downloading">Pobieranie danych</string>
    <string name="something_went_wrong">Coś poszło nie tak</string>
    <string name="try_again">Czy spróbować ponownie?</string>
    <string name="try_again_later">Spróbuj ponownie później</string>
    <string name="retry_with_connection">Spróbuj ponownie gdy odzyskasz połączenie z Internetem</string>
    <string name="updated_database_successfully">Poprawnie zaktualizowano bazę danych</string>
    <string name="database_up_to_date">Baza danych jest aktualna</string>
    <string name="wait_minute">To może chwilę potrwać.\n Prosimy o cierpliwość.</string>
    <string name="tour">Interaktywny szlak</string>
    <string name="cancel">Anuluj</string>
    <string name="city">Miasto</string>
    <string name="thats_here">To tutaj</string>
    <string name="no_place">Brak przydzielonego miejsca</string>
    <string name="you_are_offline">Brak połączenia z Internetem.</string>
    <string name="permission_needed">Potrzebujemy twojej zgody do pamięci żebyśmy mogli pobierać zdjęcia do twojego urządzenia.</string>
    <string name="not_download_desc">Nie pobieraj zdjęć.</string>
    <string name="download_bad_quality_desc">Pobieraj zdjęcia słabej jakości.</string>
    <string name="download_high_quality_desc">Pobieraj zdjęcia wysokiej jakości.</string>
    <string name="not_download">Nie pobieraj</string>
    <string name="download_bad_quality">Pobieraj w słabej jakości</string>
    <string name="download_high_quality">Pobieraj w wysokiej jakości</string>
    <string name="suggesting_changes">Sugerowanie zmian ・</string>
    <string name="content_of_article">Treść artykułu</string>
    <string name="share">Udostępnij</string>
    <string name="show_source">Wyświetl źródło</string>
    <string name="search_more_photos">Szukaj więcej zdjęć</string>
    <string name="position">Położenie</string>
    <string name="login">Zaloguj się</string>
    <string name="bookmarks">Zakładki</string>
    <string name="app">Aplikacja</string>
    <string name="db_version">Wersja bazy danych</string>
    <string name="no_information">Brak informacji</string>
    <string name="general">Ogólne</string>
    <string name="all">Wszystkie</string>
    <string name="saved_places">Zapisane miejsca</string>
    <string name="saved_articles">Zapisane artykuły</string>
    <string name="no_bookmarks">Na ten moment nie masz żadnych zakładek</string>
    <string name="photo_download_successfully">Poprawnie pobrano zdjęcie</string>
    <string name="photo_is_already_downloaded">Zdjęcie jest już pobrane</string>
    <string name="save">Zapisz</string>
    <string name="questionnaire">Ankieta</string>
</resources>
