<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".discover.DiscoverFragment">

    <LinearLayout
        android:id="@+id/discoverLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/discoverMargin"
            android:paddingEnd="@dimen/discoverMargin"
            android:paddingTop="30dp"
            android:paddingBottom="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/world_art"
                android:textColor="@color/colorTitleGray"
                android:textStyle="bold"
                android:textSize="32sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/know_about_culture"
                android:lineSpacingExtra="4dp"
                android:textColor="@color/colorParagraphGray"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sh_dialog_bottom_sheet_photo"
                    android:drawableStart="@drawable/ic_search_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/search"
                    android:maxLines="1"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/clickableSearchView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>